# CoreApp

./: .gitignore  CMakeLists.txt  Package.appxmanifest  README.md  readme.txt
Assets/: CoreApp_TemporaryKey.pfx
